# arabic_to_path

./: Cargo.toml
src/: main.rs  text.rs
